--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-application-prefer-dark-theme=1
-gtk-theme-name=Clearlooks
+gtk-theme-name=Adwaita
 gtk-icon-theme-name=Faenza
 gtk-font-name=Terminus 13
 gtk-cursor-theme-size=18
