--- a/tmux.conf
+++ b/tmux.conf
@@ -96,21 +96,26 @@ bind-key -n 'M-z' select-window -t 10
 bind-key -n 'M-x' select-window -t 11
 bind-key -n 'M-c' select-window -t 12
 
+# Move windows
+bind-key -r '>' swap-window  -t +1
+bind-key -r '<' swap-window  -t -1
+
 # Maximum number of lines held in window history
 set-option -g history-limit 50000
 
 # Status bar
 set-option -g status-position top
 set-option -g status-bg colour236
-set-option -g status-fg white
+set-option -g status-fg colour15
 set-option -g status-left ''
 
 set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
-set-option -g status-right-fg white
+set-option -g status-right-fg colour15
 set-option -g status-right-bg colour236
 
-set-option -g window-status-format " #I:#W "
-set-option -g window-status-current-format " #I:#W#{?window_zoomed_flag,*,} "
+set-option -g window-status-format " #W#(tmux-print-divider.sh #I)"
+set-option -g window-status-current-format " #W#{?window_zoomed_flag,*,}#(tmux-print-divider.sh #I)"
+
 set-option -g window-status-current-fg colour15
 set-option -g window-status-current-bg colour72
 
@@ -120,6 +125,9 @@ set-option -g pane-border-fg colour72
 
 # Monitor for activity in the window
 set-window-option -g monitor-activity
+
+# Renumber windows after close
+set-option -g renumber-windows on
 
 # Jump to the next session
 bind-key 'F1' switch-client -t $0
