--- a/eslintrc.yml
+++ b/eslintrc.yml
@@ -1,6 +1,6 @@
 env:
   browser: true
-extends: 'eslint:recommended'
+extends: ['eslint:recommended', 'plugin:react/recommended']
 parserOptions:
   ecmaVersion: 7
   sourceType: 'module'
