--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set-option -g set-clipboard off
 
 # Copy to Xorg bindings
 bind-key 'C-y' run "tmux save-buffer - | xsel -ib"\; display-message 'Copied'
-#bind-key 'C-p' run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"\; display-message 'Pasted'
+bind-key 'C-p' run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"\; display-message 'Pasted'
 
 # Rename keys
 bind-key 'r' command-prompt -p 'Rename window:' -I '#{window_name}' 'rename-window %1'
@@ -50,9 +50,9 @@ bind-key 'R' command-prompt -p 'Rename session:' -I '#{session_name}' 'rename-se
 # Zoom
 bind-key -n 'M-z' resize-pane -Z
 
-# Vim copy keys
+# Vim copy-paste keys
 bind-key 'Escape' copy-mode
-bind-key 'p' paste-buffer
+bind-key 'p' paste-buffer -p
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
 bind-key -T copy-mode-vi 'Y' send-keys -X copy-selection # do not close copy-mode
@@ -146,7 +146,7 @@ bind-key '-' split-window -v -c '#{pane_current_path}'
 bind-key 'c' new-window -c '#{pane_current_path}'
 
 # save buffer
-bind-key 'P' command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -50000 ; save-buffer %1 ; delete-buffer'
+# bind-key 'P' command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -50000 ; save-buffer %1 ; delete-buffer'
 
 # set window titles
 #set -g set-titles on
