Refined tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,8 +40,8 @@ set-option -g mode-keys vi
 set-option -g set-clipboard off
 
 # Copy to Xorg bindings
-bind-key 'C-y' run "tmux save-buffer - | xsel -ib"\; display-message 'Copied'
-bind-key 'C-p' run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"\; display-message 'Pasted'
+bind-key 'C-y' run "tmux save-buffer - | xsel -ib"
+bind-key 'C-p' run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"
 
 # Rename keys
 bind-key 'r' command-prompt -p 'Rename window:' -I '#{window_name}' 'rename-window %1'
