--- a/tmux.conf
+++ b/tmux.conf
@@ -149,9 +149,9 @@ bind-key 'c' new-window -c '#{pane_current_path}'
 # bind-key 'P' command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -50000 ; save-buffer %1 ; delete-buffer'
 
 # set window titles
-#set -g set-titles on
-#set -g set-titles-string '#S'
-#setw -g automatic-rename
+set -g set-titles on
+set -g set-titles-string '#S'
+setw -g automatic-rename
 
 # plugins
 set-option -g @plugin 'tmux-plugins/tpm'
