--- a/tmux.conf
+++ b/tmux.conf
@@ -109,7 +109,8 @@ set-option -g status-bg colour236
 set-option -g status-fg colour15
 set-option -g status-left ''
 
-set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
+set-option -g status-right "#(battery-status.sh -t)  #[fg=colour69][#{host}]#[fg=default] #(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
+set-option -g status-right-length 60
 set-option -g status-right-fg colour15
 set-option -g status-right-bg colour236
 
