--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,6 @@ unbind-key C-Down
 unbind-key C-Left
 unbind-key C-Right
 
-
 # prefix key
 set-option -g prefix 'C-space'
 bind-key 'C-space' send-prefix
@@ -36,7 +35,7 @@ set-option -g repeat-time 250
 # Use vim-like keys
 set-option -g mode-keys vi
 
-# Attempt to set the terminal clipboard content (messes the screen)
+# Attempt to set the terminal clipboard content (messes up the screen)
 set-option -g set-clipboard off
 
 # Copy to Xorg bindings
@@ -70,7 +69,6 @@ bind-key 'l' select-pane -R
 bind-key 'k' select-pane -U
 bind-key 'j' select-pane -D
 
-
 # vim-like pane resizing
 bind-key -r C-k resize-pane -U
 bind-key -r C-j resize-pane -D
@@ -81,8 +79,6 @@ bind-key -r C-l resize-pane -R
 set-option  -g base-index 1
 set-option -wg pane-base-index 1
 
-bind-key -n 'C-M-h' previous-window
-bind-key -n 'C-M-l' next-window
 bind-key -n 'M-1' select-window -t 1
 bind-key -n 'M-2' select-window -t 2
 bind-key -n 'M-3' select-window -t 3
@@ -101,16 +97,17 @@ bind-key -r '>' swap-window  -t +1
 bind-key -r '<' swap-window  -t -1
 
 # Maximum number of lines held in window history
-set-option -g history-limit 50000
+set-option -g history-limit 5000
 
 # Status bar
+set-option -g status-interval 5
 set-option -g status-position top
 set-option -g status-bg colour236
 set-option -g status-fg colour15
 set-option -g status-left ''
 
-set-option -g status-right "#(battery-status.sh -t)  #[fg=colour69][#{host}]#[fg=default] #(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
-set-option -g status-right-length 60
+set-option -g status-right "#(battery-status.sh -t)  |  #[fg=colour69]#{host}#[fg=default]  | #(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
+set-option -g status-right-length 100
 set-option -g status-right-fg colour15
 set-option -g status-right-bg colour236
 
@@ -149,11 +146,6 @@ bind-key 'c' new-window -c '#{pane_current_path}'
 # save buffer
 # bind-key 'P' command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -50000 ; save-buffer %1 ; delete-buffer'
 
-# set window titles
-set -g set-titles on
-set -g set-titles-string '#S'
-setw -g automatic-rename
-
 # plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 
@@ -161,7 +153,7 @@ set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-capture-pane-contents 'on'
 
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
-set-option -g @continuum-restore 'off'
+set-option -g @continuum-restore 'on'
 set-option -g @continuum-save-interval '5'
 
 # Initialize TMUX plugin manager(keep this line at the very bottom of tmux.conf)
