--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-*
-qBittorrent
+GIMP/
+Slack/
+chromium/
+dconf/
+gtk*
+libreoffice/
+menus/
+mimeapps.list
+mimeapps.list*
+moc/*
+!moc/config
+mozilla/
+user-dirs.locale
+vim/
+vlc/
+yarn/
+qBittorrent/
+pulse/
+tmux/
+ranger/
+!ranger/rc.conf
+!ranger/rifle.conf
+tint2/
+!tint2/tint2rc
