--- a/slock@.service
+++ b/slock@.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Lock X session using slock for user %i
+Description=Lock X session using slock for user %u
 Before=sleep.target
 
 [Service]
-User=%i
+User=kos
 Environment=DISPLAY=:0
 ExecStartPre=/usr/bin/xset dpms force suspend
-ExecStart=/usr/local/bin/slock
+ExecStart=/usr/bin/slock
 
 [Install]
 WantedBy=sleep.target
