--- a/tmux.conf
+++ b/tmux.conf
@@ -96,6 +96,9 @@ bind-key -n 'M-c' select-window -t 12
 bind-key -r '>' swap-window  -t +1
 bind-key -r '<' swap-window  -t -1
 
+# Do not change window title
+set-option -g set-titles off
+
 # Maximum number of lines held in window history
 set-option -g history-limit 5000
 
