--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,17 +1,19 @@
 [Settings]
-gtk-application-prefer-dark-theme=1
-gtk-theme-name=Blackbird
-gtk-icon-theme-name=breeze-dark
-gtk-font-name=Terminus 11
-gtk-cursor-theme-size=18
-gtk-toolbar-style=GTK_TOOLBAR_TEXT
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-application-prefer-dark-theme=true
 gtk-button-images=0
-gtk-menu-images=1
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=18
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
+gtk-fallback-icon-theme=Adwaita
+gtk-font-name=Sans Serif  11
+gtk-icon-theme-name=breeze-dark
+gtk-menu-images=0
+gtk-primary-button-warps-slider=0
+gtk-theme-name=Default
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-xft-antialias=0
 gtk-xft-hinting=0
 gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
-gtk-cursor-theme-name=Adwaita
