Add KDE configs

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,48 @@ tint2/
 configstore/
 fontconfig
 galculator/
+Qt
+Trolltech.conf
+arkrc
+audacious*
+autostart-scripts
+baloo*
+birdtrayrc
+bluedevilglobalrc
+drkonqirc
+gwenviewrc
+ibus
+kaccessrc
+kactivitymanagerd*
+kconf_updaterc
+kde.org/plasmashell.conf
+kded_device_automounterrc
+kfontinstuirc
+kgammarc
+khelpcenterrc
+kmixrc
+knotifyrc
+ksmserverrc
+ktimezonedrc
+ktnefrc
+ktorrent*
+kwallet*
+kwin_*
+kwinrulesrc
+libaccounts-glib
+okular*
+plasma-localerc
+plasma-nm
+plasma-org.kde.plasma.desktop-appletsrc
+plasma-pk-updates
+plasmashellrc
+session
+skypeforlinux
+spectaclerc
+startupconfig*
+systemsettingsrc
+touchpadrc
+trashrc
+ulduzsoft
+virt-viewer
+kmenueditrc
