--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,19 +1,17 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=0
-gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=18
-gtk-enable-event-sounds=0
-gtk-enable-input-feedback-sounds=0
-gtk-fallback-icon-theme=Adwaita
-gtk-font-name=Sans Serif  11
+gtk-theme-name=Adwaita-dark
 gtk-icon-theme-name=breeze-dark
-gtk-menu-images=0
-gtk-primary-button-warps-slider=0
-gtk-theme-name=Default
+gtk-icon-sizes="gtk-button=64,64:panel-menu=64,64:gtk-large-toolbar=64,64:gtk-menu=64,64:gtk-small-toolbar=64,64:gtk-dnd=64,64:gtk-dialog=64,64"
+gtk-font-name="Sans 18"
+gtk-font-name=Sans 18
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_TEXT
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-toolbar-style=GTK_TOOLBAR_ICONS
-gtk-xft-antialias=0
-gtk-xft-hinting=0
+gtk-button-images=0
+gtk-menu-images=1
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
