--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,17 +1,17 @@
 [Settings]
-gtk-theme-name=Adwaita-dark
-gtk-icon-theme-name=breeze-dark
-gtk-icon-sizes="gtk-button=64,64:panel-menu=64,64:gtk-large-toolbar=64,64:gtk-menu=64,64:gtk-small-toolbar=64,64:gtk-dnd=64,64:gtk-dialog=64,64"
-gtk-font-name="Sans 18"
-gtk-font-name=Sans 18
+gtk-button-images=0
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_TEXT
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=0
-gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
+#@@hidpi@@
+gtk-font-name=DejaVu Sans Mono 12
+gtk-icon-sizes="gtk-button=64,64:panel-menu=64,64:gtk-large-toolbar=64,64:gtk-menu=64,64:gtk-small-toolbar=64,64:gtk-dnd=64,64:gtk-dialog=64,64"
+gtk-icon-theme-name=breeze-dark
+gtk-menu-images=1
+gtk-theme-name=Adwaita-dark
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-style=GTK_TOOLBAR_TEXT
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
