--- a/compton.conf
+++ b/compton.conf
@@ -6,7 +6,8 @@ inactive-dim = 0.3;
 backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
+detect-transient = false
+detect-client-leader = false
 refresh-rate = 0;
 vsync = "none";
 dbe = false;
@@ -15,8 +16,6 @@ paint-on-overlay = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-detect-transient = true;
-detect-client-leader = true;
 invert-color-include = [ ];
 # resize-damage = 1;
 
