--- a/i3/config
+++ b/i3/config
@@ -26,14 +26,14 @@ hide_edge_borders smart
 floating_modifier $mod
 
 # lock screen
-bindsym $ctrl+$alt+l exec i3lock --color=000000
+bindsym $ctrl+$alt+l exec --no-startup-id i3lock --color=000000
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #@@hidpi@@
-bindsym $mod+space exec dmenu_run -fn 'DejaVu Sans Mono-12'
+bindsym $mod+space exec --no-startup-id dmenu_run -fn 'DejaVu Sans Mono-12'
 
 # change focus
 bindsym $mod+h focus left
@@ -112,30 +112,30 @@ bindsym $mod+Shift+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-        separator_symbol " | "
+        status_command i3blocks
+        separator_symbol "|"
         workspace_buttons no
 }
 
 # volume
-bindsym $mod+Up exec pactl set-sink-volume $(pactl list short sinks | head -c1) +5%
-bindsym $mod+Down exec pactl set-sink-volume $(pactl list short sinks | head -c1) -5%
-bindsym $mod+Shift+Delete exec pactl set-sink-mute $(pactl list short sinks | head -c1) toggle
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume $(pactl list short sinks | head -c1) +5%
-bindsym XF86AudioLowerVolume exec exec pactl set-sink-volume $(pactl list short sinks | head -c1) -5%
-bindsym XF86AudioMute exec pactl set-sink-mute $(pactl list short sinks | head -c1) toggle
+bindsym $mod+Up exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | head -c1) +5%
+bindsym $mod+Down exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | head -c1) -5%
+bindsym $mod+Shift+Delete exec --no-startup-id pactl set-sink-mute $(pactl list short sinks | head -c1) toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | head -c1) +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | head -c1) -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pactl list short sinks | head -c1) toggle
 
 #brightness
-bindsym $mod+Left exec xbacklight -dec 5 -fps 30
-bindsym $mod+Right exec xbacklight -inc 5 -fps 30
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5 -fps 30
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5 -fps 30
+bindsym $mod+Left exec --no-startup-id xbacklight -dec 5 -fps 30
+bindsym $mod+Right exec --no-startup-id xbacklight -inc 5 -fps 30
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 -fps 30
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 -fps 30
 
 # autostart
-#exec xrandr --output eDP-1 --off
-#exec nm-applet
-exec redshift
-exec kbdd
-exec parcellite --no-icon
-exec sh -c 'sleep 1s && feh --randomize --bg-fill ~/wall/*'
-exec sh -c 'sleep 1s && keynav'
+#exec --no-startup-id xrandr --output eDP-1 --off
+#exec --no-startup-id nm-applet
+exec --no-startup-id redshift
+exec --no-startup-id kbdd
+exec --no-startup-id parcellite --no-icon
+exec --no-startup-id sh -c 'sleep 1s && feh --randomize --bg-fill ~/wall/*'
+exec --no-startup-id sh -c 'sleep 1s && keynav'
