--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ hide_edge_borders smart
 floating_modifier $mod
 
 # lock screen
-bindsym $ctrl+$alt+l exec --no-startup-id i3lock --color=000000
+bindsym $ctrl+$alt+l exec --no-startup-id ~/bin/lock.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
