Add dpi-dependent configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
-mozilla/
-pulse/
-tmux/
-vim/
-qBittorrent/
-moc/
-GIMP/
-VirtualBox/
-configstore/
-gtk-2.0/
-thunderbird/
-virt-viewer/
-user-dirs.locale
-sdkmanager/
-MomodoraRUtM/
-QtProject.conf
-pavucontrol.ini
-vlc/
-dconf/
-Xresources
-dunst/
-gtk-3.0/
-gtkrc-2.0
-i3/
-mimeapps.list
+/mozilla/
+/pulse/
+/tmux/
+/vim/
+/qBittorrent/
+/moc/
+/GIMP/
+/VirtualBox/
+/configstore/
+/gtk-2.0/
+/thunderbird/
+/virt-viewer/
+/user-dirs.locale
+/sdkmanager/
+/MomodoraRUtM/
+/QtProject.conf
+/pavucontrol.ini
+/vlc/
+/dconf/
+/Xresources
+/dunst/
+/gtk-3.0/
+/gtkrc-2.0
+/i3/
+/mimeapps.list
