Update unpushed configs check

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -10,7 +10,7 @@ markup=none
 #
 [changes]
 command=~/.config/i3blocks/check-for-unpushed-configs.sh
-interval=30
+interval=10800 # 3 hours
 
 # Volume indicator
 #
