--- a/compton.conf
+++ b/compton.conf
@@ -11,7 +11,7 @@ detect-client-leader = false
 refresh-rate = 0;
 vsync = "none";
 dbe = false;
-paint-on-overlay = true;
+paint-on-overlay = false;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
