--- a/i3blocks/config
+++ b/i3blocks/config
@@ -19,9 +19,8 @@ interval=600
 command=/usr/share/i3blocks/volume 1% pulse
 label=VOL
 instance=Master
-interval=5
-#interval=once
-#signal=10
+interval=10
+signal=10
 
 [disk]
 label=/
@@ -67,7 +66,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%A, %d'
+command=date '+%A, %B %d, %H:%M'
 interval=5
 
 # Generic media player support
