Update configs, delete old ones

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 set noparent
-filter=-whitespace/braces,-whitespace/indent,-build/c++11,-runtime/string
+filter=-whitespace/braces,-whitespace/indent,-build/c++11,-runtime/string,-build/include_subdir,-readability/todo,-runtime/references
