--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,9 @@ unbind-key C-Right
 set-option -g prefix 'C-space'
 bind-key 'C-space' send-prefix
 
+# set default terminal so colors will be accurate
+set -g default-terminal "screen-256color"
+
 # Time in milliseconds for which tmux waits after an escape is input
 set-option -g escape-time 0
 
