Add KDE configs

--- a/.gitignore
+++ b/.gitignore
@@ -3,26 +3,65 @@
 /tmux/
 /vim/
 /qBittorrent/
-/moc/
 /GIMP/
 /VirtualBox/
 /configstore/
 /gtk-2.0/
 /thunderbird/
-/virt-viewer/
-/user-dirs.locale
 /sdkmanager/
-/MomodoraRUtM/
 /QtProject.conf
 /pavucontrol.ini
 /vlc/
 /dconf/
 /Xresources
-/dunst/
-/gtk-3.0/
-/gtkrc-2.0
-/i3/
-/mimeapps.list
 spotify/
 galculator/
 icedtea-web/
+Trolltech.conf
+arkrc
+autostart
+bluedevilglobalrc
+dolphinrc
+drkonqirc
+emaildefaults
+emailidentities
+/enchant/
+/gtk-3.0/bookmarks
+gwenviewrc
+/ibus/
+kaccessrc
+kactivitymanagerd-statsrc
+kactivitymanagerdrc
+kcalcrc
+kconf_updaterc
+kde5-nm-connection-editorrc
+kdebugrc
+kded_device_automounterrc
+keditfiletyperc
+kfontinstuirc
+kgammarc
+khelpcenterrc
+khotkeysrc
+kinfocenterrc
+kmixrc
+ktimezonedrc
+kwalletmanager5rc
+kwalletrc
+/libaccounts-glib/
+/libreoffice/
+okularpartrc
+okularrc
+org.kde.gwenviewrc
+plasma-locale-settings.sh
+plasma-localerc
+plasma-nm
+plasmadiscoverupdaterrc
+/ranger/
+/session/
+spectaclerc
+startupconfigfiles
+/teams-for-linux/
+trashrc
+user-dirs.locale
+vlcrc
+user-dirs.dirs
