--- a/tmux.conf
+++ b/tmux.conf
@@ -63,16 +63,17 @@ bind-key 'y' copy-mode\; send-keys 'Vh'\; send-keys 'y'\; display-message 'Copie
 bind-key 'v' copy-mode\; send-keys 'v'
 
 # Use Alt-hjkl keys to switch panes
-bind-key -n 'M-h' select-pane -L
-bind-key -n 'M-l' select-pane -R
-bind-key -n 'M-k' select-pane -U
-bind-key -n 'M-j' select-pane -D
-bind-key 'h' select-pane -L
-bind-key 'l' select-pane -R
-bind-key 'k' select-pane -U
-bind-key 'j' select-pane -D
+# vim-tmux-navigator cares about this
+# bind-key -n 'M-h' select-pane -L
+# bind-key -n 'M-l' select-pane -R
+# bind-key -n 'M-k' select-pane -U
+# bind-key -n 'M-j' select-pane -D
+# bind-key 'h' select-pane -L
+# bind-key 'l' select-pane -R
+# bind-key 'k' select-pane -U
+# bind-key 'j' select-pane -D
 
-# vim-like pane resizing
+# vim-like pane resize
 bind-key -r C-k resize-pane -U
 bind-key -r C-j resize-pane -D
 bind-key -r C-h resize-pane -L
@@ -163,4 +164,5 @@ set-option -g @continuum-restore 'on'
 set-option -g @continuum-save-interval '5'
 
 # Initialize TMUX plugin manager(keep this line at the very bottom of tmux.conf)
+set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.tmux/plugins/tpm/tpm'
