--- a/tmux.conf
+++ b/tmux.conf
@@ -62,8 +62,18 @@ bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
 bind-key 'y' copy-mode\; send-keys 'Vh'\; send-keys 'y'\; display-message 'Copied line'
 bind-key 'v' copy-mode\; send-keys 'v'
 
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
+bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
+bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
+bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
+bind-key -T copy-mode-vi M-h select-pane -L
+bind-key -T copy-mode-vi M-j select-pane -D
+bind-key -T copy-mode-vi M-k select-pane -U
+bind-key -T copy-mode-vi M-l select-pane -R
+
 # Use Alt-hjkl keys to switch panes
-# vim-tmux-navigator cares about this
 # bind-key -n 'M-h' select-pane -L
 # bind-key -n 'M-l' select-pane -R
 # bind-key -n 'M-k' select-pane -U
@@ -164,5 +174,4 @@ set-option -g @continuum-restore 'on'
 set-option -g @continuum-save-interval '5'
 
 # Initialize TMUX plugin manager(keep this line at the very bottom of tmux.conf)
-set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.tmux/plugins/tpm/tpm'
