Transition to LXQT + Openbox

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ CSP
 Teams for Linux/
 skypeforlinux/
 device_automounter_kcmrc
+lximage-qt
+pavucontrol-qt
+pcmanfm-qt
+qpdfview
+urxvt
+xarchiver
