--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,4 @@
 set noparent
+linelength=120
 filter=-whitespace/braces,-whitespace/indent,-build/c++11,-runtime/string,-build/include_subdir,-readability/todo,-runtime/references
 root=../
