--- a/tmux.conf
+++ b/tmux.conf
@@ -123,7 +123,11 @@ set-option -g status-bg colour236
 set-option -g status-fg colour15
 set-option -g status-left ''
 
-set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
+set-option -g status-right "VOL: #(volume-status.sh --volume)    \
+MIC: #(volume-status.sh --microphone)    \
+#(battery-status.sh -t)    \
+#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})   \
+%A, %B %e, %H:%M"
 set-option -g status-right-length 100
 set-option -g status-right-fg colour15
 set-option -g status-right-bg colour236
