Migration to TMUX 3.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -129,18 +129,15 @@ MIC: #(volume-status.sh --microphone)    \
 #(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})   \
 %A, %B %e, %H:%M"
 set-option -g status-right-length 100
-set-option -g status-right-fg colour15
-set-option -g status-right-bg colour236
+set-option -g status-style fg=colour15,bg=colour236
 
 set-option -g window-status-format " #W#(tmux-print-divider.sh #I)"
 set-option -g window-status-current-format " #W#{?window_zoomed_flag,*,}#(tmux-print-divider.sh #I)"
 
-set-option -g window-status-current-fg colour15
-set-option -g window-status-current-bg colour72
+set-option -g window-status-current-style fg=colour15,bg=colour72
 
-set-option -g pane-active-border-bg colour72
-set-option -g pane-active-border-fg colour72
-set-option -g pane-border-fg colour72
+set-option -g pane-active-border-style bg=colour72,fg=colour72
+set-option -g pane-border-style fg=colour72
 
 # Monitor for activity in the window
 set-window-option -g monitor-activity
