--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,10 +1,14 @@
-
-# Created by lxqt-config-appearance (DO NOT EDIT!)
 [Settings]
-gtk-theme-name = Adwaita
-gtk-icon-theme-name = Papirus
-# GTK3 ignores bold or italic attributes.
-gtk-font-name = Sans 11
-gtk-menu-images = 0
-gtk-button-images = 0
-gtk-toolbar-style = GTK_TOOLBAR_TEXT
+gtk-application-prefer-dark-theme=true
+gtk-button-images=true
+gtk-cursor-theme-name=breeze_cursors
+gtk-cursor-theme-size=36
+gtk-decoration-layout=:
+gtk-enable-animations=true
+gtk-font-name=DejaVu Sans,  13
+gtk-icon-theme-name=breeze-dark
+gtk-menu-images=true
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=false
+gtk-theme-name=Adwaita
+gtk-toolbar-style=3
