--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,7 @@ set-option -g prefix 'C-space'
 bind-key 'C-space' send-prefix
 
 # set default terminal so colors will be accurate
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Time in milliseconds for which tmux waits after an escape is input
 set-option -g escape-time 0
@@ -123,11 +123,7 @@ set-option -g status-bg colour236
 set-option -g status-fg colour15
 set-option -g status-left ''
 
-set-option -g status-right "VOL: #(volume-status.sh --volume)    \
-MIC: #(volume-status.sh --microphone)    \
-#(battery-status.sh -t)    \
-#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})   \
-%A, %B %e, %H:%M"
+set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
 set-option -g status-right-length 100
 set-option -g status-style fg=colour15,bg=colour236
 
