--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,14 +1,12 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=true
+gtk-application-prefer-dark-theme=1
+gtk-button-images=1
 gtk-cursor-theme-name=breeze_cursors
-gtk-cursor-theme-size=36
-gtk-decoration-layout=:
-gtk-enable-animations=true
-gtk-font-name=DejaVu Sans,  13
+gtk-decoration-layout=icon:close
+gtk-enable-animations=0
+gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=breeze-dark
-gtk-menu-images=true
-gtk-modules=colorreload-gtk-module
-gtk-primary-button-warps-slider=false
-gtk-theme-name=Adwaita
-gtk-toolbar-style=3
+gtk-menu-images=1
+gtk-primary-button-warps-slider=0
+gtk-theme-name=Breeze
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
