--- a/tmux.conf
+++ b/tmux.conf
@@ -142,15 +142,8 @@ set-window-option -g monitor-activity
 set-option -g renumber-windows on
 
 # Jump to the next session
-bind-key 'F1' switch-client -t $0
-bind-key 'F2' switch-client -t $1
-bind-key 'F3' switch-client -t $2
-bind-key 'F4' switch-client -t $3
-bind-key 'F5' switch-client -t $4
-bind-key 'F6' switch-client -t $5
-bind-key 'F7' switch-client -t $6
-bind-key 'F8' switch-client -t $7
-bind-key 'F9' switch-client -t $8
+bind-key 'Left' switch-client -p
+bind-key 'Right' switch-client -n
 
 # Split panes and save paths
 bind-key '\' split-window -h -c '#{pane_current_path}'
