--- a/tmux.conf
+++ b/tmux.conf
@@ -123,12 +123,12 @@ set-option -g status-bg colour236
 set-option -g status-fg colour15
 set-option -g status-left ''
 
-set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
+#set-option -g status-right "#(tmux-print-sessions.sh #{s/$//:session_id}:#{session_name})"
 set-option -g status-right-length 100
 set-option -g status-style fg=colour15,bg=colour236
 
-set-option -g window-status-format " #W#(tmux-print-divider.sh #I)"
-set-option -g window-status-current-format " #W#{?window_zoomed_flag,*,}#(tmux-print-divider.sh #I)"
+#set-option -g window-status-format " #W#(tmux-print-divider.sh #I)"
+#set-option -g window-status-current-format " #W#{?window_zoomed_flag,*,}#(tmux-print-divider.sh #I)"
 
 set-option -g window-status-current-style fg=colour15,bg=colour72
 
